2007-06-29 Mark Grondona <mgrondona@llnl.gov>

	* edac-utils.spec : sysfsutils-devel was renamed libsysfs-devel
	  in RHEL5 - update BuildRequires.

2007-06-20 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl : Removed.

	* src/util/edac-ctl.in : Added. edac-ctl is now built from
	  edac-ctl.in in order to get the correct value for
	  sysconfdir.

	* src/etc/edac.init : Removed.

	* src/etc/edac.init.in : Added. edac.init is now built
	  from edac-init.in in order to substitute values for
	  prefix, exec_prefix, and sbindir.

	* configure.ac : Modifications needed to build the above.
	  Fix declaration of PACKAGE and VERSION.

	* Makefile.am, src/etc/Makefile.am : Fixes needed for
	  'make distcheck'

2007-06-08 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl :
	  Allow for empty labels in --print-labels.

2007-06-05 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl :
	  Allow for whitespace in MB model name.

2007-05-07 Mark Grondona <mgrondona@llnl.gov>
	* src/lib/edac.3.in, src/util/edac-util.1.in, 
	  src/util/edac-ctl.8.in :
	  Add manpages for libedac, edac-util, and edac-ctl.

	* src/lib/Makefile.am, src/util/Makefile.am,
	  configure.ac : Changes for new manpages.

	* : tag version 0.9.

2007-05-07 Mark Grondona <mgrondona@llnl.gov>

	* : Added official UCRL number.

2007-04-25 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-util.c : Issue "No errors to report." message to
	  stdout, not stderr.

	* : tag version 0.8.

2007-04-18 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-util.c : Default report changed to report any
	  DIMM (or unknown location) with an error count. This is more
	  useful for diagnosis and thus makes sense to be the defualt.
	  Old default changed to "simple" report.

	* src/util/edac-util.c : Also report "noinfo" CE and UE count
	  in full report.

	* src/etc/labels.db : Switch DIMMC and DIMMD locations for H8QM8.

	* src/util/edac-ctl : Add registered labels to --print-labels